march/compiling_error.txt
D:\c++\march\train.cpp:7:9: error: expected ';' at end of member declaration
     int train number;
         ^
D:\c++\march\train.cpp:7:15: error: 'number' does not name a type
     int train number;
               ^
D:\c++\march\train.cpp: In member function 'void Train::calfuel()':
D:\c++\march\train.cpp:21:8: error: 'dsistance' was not declared in this scope
     if(dsistance<=1500)
        ^
D:\c++\march\train.cpp:23:29: error: expected identifier before '(' token
     else if(distance>1500)&&(distance<=3000)
                             ^
D:\c++\march\train.cpp: In member function 'void Train::read()':
D:\c++\march\train.cpp:32:16: error: expected ';' before 'number'
     cin>>train number;
                ^
D:\c++\march\train.cpp:38:1: error: expected ';' before '}' token
 }
 ^
